[package]
name = "GemFetch"
version = "0.1.5"
edition = "2021"
authors = ["Carlinux <sponkutus098@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sponkurtus2/GemFetch/"
description = "A simple neofetch-style inspired in a Gem"
keywords = ["system", "cli"]
license = "MIT"

[dependencies]
colored = "2.2.0"
os_info = "3.9.0"
unicode-width = "0.2.0"
whoami = "1.5.2"

[profile.release]
lto = true
codegen-units = 1
